@@ -1,3 +1,8 @@
+*geoip2-4.1.0 (14 Nov 2020)
+
+  14 Nov 2020; Manuel Friedli <manuel@gentoo.org> +geoip2-4.1.0.ebuild:
+  dev-python/geoip2: Add latest available version.
+
 *geoip2-4.0.2 (03 Aug 2020)
 
   03 Aug 2020; Manuel Friedli <manuel@fritteli.ch> +geoip2-4.0.2.ebuild,
